name:                logentries
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/logentries#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Network.Wai.Middleware.RequestLogger.LogEntries

  build-depends: base         >= 4.7 && < 5
               , bytestring   >= 0.10.6.0 && < 0.10.7.0
               , data-default >= 0.5.3 && < 0.6.0
               , fast-logger  >= 2.4.6 && < 2.5.0
               , network      >= 2.6.2.1 && < 2.6.3.0
               , stm          >= 2.4.4.1 && < 2.4.5.0
               , uuid-types   >= 1.0.3 && < 1.1.0
               , wai          >= 3.2.1.1 && < 3.2.2.0
               , wai-extra    >= 3.0.15.1 && < 3.0.16.0

  default-language:    Haskell2010

  default-extensions:
    OverloadedStrings
    RecordWildCards

test-suite logentries-test
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test

  main-is:             Spec.hs

  build-depends:       base
                     , logentries

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/logentries
